more spacing fixes

--- a/home_style.css
+++ b/home_style.css
@@ -104,8 +104,8 @@ a:link, a:visited, a:hover, a:active {
     float: left;
     width: 98px;
     height: 102px;
-    margin-left: 3%;
-    margin-bottom: 2%;
+    margin-left: 2.75%;
+    margin-bottom: 1.575%;
     margin-top: 1%;
     border: 2px solid white;
     border-radius: 50%;
